# Native-Memory-Scripter

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.github/workflows/: build.yml  deploy_book.yml
book/: book.toml
book/src/: SUMMARY.md  best-practices.md  configuration.md  faq.md  here-be-dragons.md  introduction.md  project-layout-and-setup.md  project-layout.md  tips-and-tricks.md
book/src/_assets/: jmp-hook.excalidraw
book/src/asm/: asm.md  assemble.md  assemble_ex.md  code_len.md  disassemble.md  objects-inst.md
book/src/cffi/: callconv.md  cffi.md  conv.md  objects-callable.md  objects-nativecall.md  objects-wstr.md  type.md
book/src/hook/: hook.md  hook_.md  objects-trampoline.md
book/src/iat/: enum.md  enum_demangled.md  find.md  find_demangled.md  find_dll_demangled.md  find_ordinal.md  find_with_dll.md  find_with_dll_demangled.md  find_with_dll_ordinal.md  iat.md  objects-iatsymbol.md
book/src/info/: info.md  object-version.md  version.md
book/src/log/: debug.md  error.md  info.md  log.md  trace.md  warn.md
book/src/mem/: Vmt.md  Vmt_get_original.md  Vmt_hook.md  Vmt_new.md  Vmt_reset.md  Vmt_unhook.md  alloc.md  alloc_granularity.md  alloc_in.md  alloc_memory.md  assemble.md  code_length.md  data_scan.md  deep_pointer.md  demangle_symbol.md  disassemble.md  enum_modules.md  enum_pages.md  enum_processes.md  enum_symbols.md  enum_symbols_demangled.md  enum_threads.md  find_module.md  find_process.md  find_symbol_address.md  find_symbol_address_demangled.md  free_memory.md  get_page.md  get_process.md  get_system_bits.md  get_thread.md  get_thread_process.md  hook_code.md  is_process_alive.md  load_module.md  mem.md  objects-alloc.md  objects-inst.md  objects-module.md  objects-page.md  (+16 more)
book/src/modules/: enum.md  find.md  load.md  modules.md  objects-module.md  unload.md
book/src/plugin/: plugin.md
book/src/popup/: error.md  exclamation.md  info.md  popup.md  question.md  warn.md
book/src/scan/: data.md  data_scan.md  pattern.md  pattern_scan.md  scan.md  sig.md  sig_scan.md
book/src/segments/: enum.md  find.md  objects-segment.md  segments.md
book/src/symbols/: demangle.md  enum.md  enum_demangled.md  find.md  find_address.md  find_address_demangled.md  find_demangled.md  objects-symbol.md  symbols.md
book/src/vmt/: objects-vtable.md  vmt.md
book/src/vtable/: objects-vtable.md  vtable.md
book/theme/: checkboxes.js  custom.css  init.js  pagetoc.css
crates/modules/: Cargo.toml  build.rs
crates/modules/src/: lib.rs  mem.rs  utils.rs
crates/modules/src/utils/: console.rs
crates/native-memory-scripter/: Cargo.toml  build.rs
crates/native-memory-scripter/src/: config.rs  console.rs  engine.rs  interpreter.rs  lib.rs  logging.rs  modules.rs  paths.rs  utils.rs
crates/native-memory-scripter/src/modules/: bootstrap.py  cffi.rs  info.rs  mem.py  mem.rs
crates/native-memory-scripter/src/modules/cffi/: args.rs  jit.rs  jit_wrapper.rs  ret.rs  trampoline.rs  types.rs
crates/native-memory-scripter/src/modules/cffi/jit_wrapper/: callback.rs
lib/: README.md
rust/: Cargo.toml
rust/mem/: Cargo.toml
rust/mem/src/: asm.rs  hook.rs  iat.rs  lib.rs  memory.rs  module.rs  scan.rs  scanner.rs  segment.rs  symbol.rs  symbols.rs  vtable.rs
rust/mem/src/scan/: README.md  aligned_bytes.rs  backends.rs  pattern.rs
rust/mem/src/scan/backends/: avx2.rs  sse42.rs
rust/mem/src/scanner/: aligned_bytes.rs  backends.rs  pattern.rs
rust/mem/src/scanner/backends/: avx2.rs  scalar.rs  sse42.rs
rust/mutation/: Cargo.toml
rust/mutation/src/: lib.rs  memory.rs  segments.rs  vtable.rs
rust/mutation/src/memory/: monitor.rs  write_monitor.rs
rust/mutation/src/scan/: backends.rs
rust/mutation/src/scan/backends/: scalar.rs
rust/native-memory-scripter/: Cargo.toml
rust/native-memory-scripter/src/: config.rs  console.rs  interpreter.rs  lib.rs  logging.rs  modules.rs  paths.rs  popup.rs  utils.rs
rust/native-memory-scripter/src/modules/: asm.rs  cffi.rs  hook.rs  iat.rs  info.rs  log.rs  mem.rs  module.rs  modules.rs  popup.rs  scan.rs  segment.rs  segments.rs  symbol.rs  symbols.rs  vmt.rs
rust/native-memory-scripter/src/modules/cffi/: args.rs  jit.rs  jit_wrapper.rs  jitpoline.rs  ret.rs  trampoline.rs  types.rs  vm.rs
rust/native-memory-scripter/src/modules/cffi/jit/: callback.rs
rust/native-memory-scripter/src/modules/cffi/jit_wrapper/: callback.rs
src/: config.rs  console.rs  lib.rs  logging.rs  lua.rs  modules.rs  panic.rs  paths.rs  popup.rs
src/modules/: mem.rs  utils.rs
