[package]
name = "bg3-plugin-template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.20"
simplelog = "0.12.1"
eyre = "0.6.12"
directories = "5.0.1"
backtrace = "0.3.69"
# to update this, you need to update the static lib in the lib folder
# go to the release page to download the compiled static lib
# https://github.com/rdbo/libmem/releases
#
# Look for the *-x86_64-windows-msvc-static-mt version
# open the archive, and in the lib folder, use the release libmem.lib
#
# For more info on which version to use, how to install, etc,
# see README in lib folder
libmem = { version = "4.4.0", features = ["static"] }

serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
bg3-plugin-lib = { git = "https://github.com/MolotovCherry/BG3-Plugin-Lib" }

# docs can be found here. different api functions require adding the relevant features
# https://microsoft.github.io/windows-docs-rs/doc/windows/index.html
[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    # for the popup
    "Win32_UI_WindowsAndMessaging",
    # for debugger
    "Win32_System_Diagnostics_Debug",
    # for console
    "Win32_System_Console",
]

[build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
lto = true
codegen-units = 1

# stamp dll with project metadata 😄
# see winres for more keys to stamp your dll with
# https://docs.rs/winres/0.1.12/winres/struct.WindowsResource.html
[package.metadata.winres]
OriginalFilename = "PROGRAM.EXE"
LegalCopyright = "Copyright © 2023"
