[package]
name = "modules"
version = "0.1.0"
edition = "2021"

[dependencies]
rhai = "1.17.1"
eyre = "0.6.12"
tracing = "0.1.40"
konst = "0.3.8"

# to update this, you need to update the static lib in the lib folder
# go to the release page to download the compiled static lib
# https://github.com/rdbo/libmem/releases
#
# Look for the *-x86_64-windows-msvc-static-mt version
# open the archive, and in the lib folder, use the release libmem.lib
#
# For more info on which version to use, how to install, etc,
# see README in lib folder
[dependencies.libmem]
version = "4.4.0"
features = ["static"]

[dependencies.windows]
version = "0.53.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    # for console
    "Win32_System_Console",
]

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl"] }
