[package]
name = "native-memory-scripter"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MolotovCherry/Native-Memory-Scripter"
description = "Plugin to allow process memory editing through dynamic scripts"

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
eyre = "0.6.12"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
strip-ansi-escapes = "0.2.0"
directories = "5.0.1"
backtrace = "0.3.71"
serde = { version = "1.0.202", features = ["derive"] }
toml = "0.8.13"
native-plugin-lib = { git = "https://github.com/MolotovCherry/Native-Plugin-Lib" }
owo-colors = "4.0.0"
thiserror = "1.0.61"
rustpython = { version = "0.3.1", features = ["stdlib", "freeze-stdlib"] }
rustpython-vm = { version = "0.3.1", features = ["freeze-stdlib"] }
walkdir = "2.5.0"

# to update this, you need to update the static lib in the lib folder
# go to the release page to download the compiled static lib
# https://github.com/rdbo/libmem/releases
#
# Look for the *-x86_64-windows-msvc-static-mt version
# open the archive, and in the lib folder, use the release libmem.lib
#
# For more info on which version to use, how to install, etc,
# see README in lib folder
[dependencies.libmem]
version = "4.4.0"
features = ["static"]

# docs can be found here. different api functions require adding the relevant features
# https://microsoft.github.io/windows-docs-rs/doc/windows/index.html
[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    # for the popup
    "Win32_UI_WindowsAndMessaging",
    # for debugger
    "Win32_System_Diagnostics_Debug",
    # for console
    "Win32_System_Console",
]

[build-dependencies]
winres = "0.1.12"
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl"] }

[profile.dev]
opt-level = 1

[profile.release]
debug = true
lto = true
codegen-units = 1

# stamp dll with project metadata 😄
# see winres for more keys to stamp your dll with
# https://docs.rs/winres/0.1.12/winres/struct.WindowsResource.html
[package.metadata.winres]
OriginalFilename = "NATIVE-MEMORY-SCRIPTER.DLL"
LegalCopyright = "Copyright Cherry © 2024"
Comments = "For more details: https://github.com/MolotovCherry/Native-Memory-Scripter"
