[package]
name = "mem"
version = "0.1.0"
edition = "2021"
description = "Memory hacking library"

[dependencies]
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
keystone-engine = { version = "0.1.0", features = ["build-from-src"] }
capstone = "0.12.0"
arrayvec = "0.7.4"
tracing = "0.1.40"
pelite = "0.10.0"
symbolic-common = "12.9.2"
undname = "1.1.1"

[dependencies.symbolic-demangle]
version = "12.9.2"
default-features = false
features = ["cpp", "rust", "swift"]

[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
]
