[package]
name = "native-memory-scripter"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MolotovCherry/Native-Memory-Scripter"
description = "Plugin to allow process memory editing through dynamic scripts"

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
eyre = "0.6.12"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
strip-ansi-escapes = "0.2.0"
directories = "5.0.1"
# downgraded until color-eyre fixes their dep
# https://github.com/eyre-rs/color-eyre/issues/152
backtrace = "=0.3.59"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
native-plugin-lib = { git = "https://github.com/MolotovCherry/Native-Plugin-Lib" }
owo-colors = "4.0.0"
thiserror = "1.0.61"
rustpython = { git = "https://github.com/MolotovCherry/RustPython", branch = "io-fix", features = [
    "stdlib",
    "freeze-stdlib",
] }
rustpython-vm = { git = "https://github.com/MolotovCherry/RustPython", branch = "io-fix", features = [
    "freeze-stdlib",
    "threading",
    "jit",
] }
walkdir = "2.5.0"
mem = { path = "../mem" }
konst = { version = "0.3.9", features = ["parsing"] }
# to run a JIT for creating native function wrappers over python functions
cranelift = "0.109.0"
cranelift-jit = "0.109.0"
cranelift-module = "0.109.0"
cranelift-native = "0.109.0"

# docs can be found here. different api functions require adding the relevant features
# https://microsoft.github.io/windows-docs-rs/doc/windows/index.html
[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    # for the popup
    "Win32_UI_WindowsAndMessaging",
    # for debugger
    "Win32_System_Diagnostics_Debug",
    # for console
    "Win32_System_Console",
]

[build-dependencies]
winres = "0.1.12"
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl"] }

# stamp dll with project metadata 😄
# see winres for more keys to stamp your dll with
# https://docs.rs/winres/0.1.12/winres/struct.WindowsResource.html
[package.metadata.winres]
OriginalFilename = "NATIVE-MEMORY-SCRIPTER.DLL"
LegalCopyright = "Copyright Cherry © 2024"
Comments = "For more details: https://github.com/MolotovCherry/Native-Memory-Scripter"
